--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <!--Iconos-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="../js/index.js" defer></script>
+    <script src="./js/index.js" defer></script>
 </head>
 <body>
   <nav class="sidebar locked">
     <div class="logo_items flex">
       <span class="nav_image">
-        <img src="../img/Mi logo.svg" alt="logo_image">
+        <img src="./img/Mi logo.svg" alt="logo_image">
       </span>
       <span class="logo_name">erid-Stick</span>
       <i class='bx bx-lock-alt' id="lock-icon"></i>
@@ -98,7 +98,7 @@
         </div>
         <div class="profile-items">
           <span class="sidebar-profile-nav-image">
-            <img id="sidebar-profile-image" src="../img/Profile/Profile.png" alt="Foto_Yerid">
+            <img id="sidebar-profile-image" src="./img/Profile/Profile.png" alt="Foto_Yerid">
           </span>
           <div class="data-text">
             <span class="data-text-item">
@@ -114,7 +114,7 @@
   <nav class="navbar flex">
     <i class="bx bx-menu" id="sidebar-open"></i>
     <input type="text" placeholder="Search..." class="search-box" name="buscar">
-    <img id="navbar-image-profile-image"  src="../img/Profile/Profile.png" alt="Foto_Yerid">
+    <img id="navbar-image-profile-image"  src="./img/Profile/Profile.png" alt="Foto_Yerid">
   </nav>
 </body>
 </html>
